--- a/index.html
+++ b/index.html
@@ -353,7 +353,6 @@
         <div class="row">
             <!--<div class="col-lg-offset-3 col-lg-7">-->
             <div class="col-lg-offset-3 col-lg-6"> 
-
                 <h3>       
                     <table style="width:100%">
                       <tr>
@@ -376,10 +375,12 @@
                       </tr>
                     </table>
                 </h3>
-
             </div>
-            <!--FACEBOOK-->
-            <div class="col-lg-3">
+        </div>
+        <!--FACEBOOK-->
+        <br>
+        <div class="row">
+            <div class="col-lg-offset-3 col-lg-6" style="text-align:center">
                 <div id="fb-root"></div>
                 <div class="fb-like-box" data-href="https://www.facebook.com/HotelAntonioConil" data-colorscheme="light" data-show-faces="true" data-header="false" data-stream="true" data-show-border="false"></div>
             </div>
@@ -431,6 +432,7 @@
     <script>
       var map;
       function initialize() {
+        debugger
         var mapOptions = {
           zoom: 17,
           //center: new google.maps.LatLng(-34.397, 150.644),	
